Bug 140557 - NB Tabbed interface not using whole width of the NB to show controls (STR comment 11)
Summary: NB Tabbed interface not using whole width of the NB to show controls (STR com...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: high normal
Assignee: Justin L
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
: 140857 141465 142480 145164 148960 150634 152230 153494 153788 154283 154626 154807 154895 155658 156346 156976 164670 (view as bug list)
Depends on:
Blocks: Notebookbar-Resize Notebookbar-Tabbed
  Show dependency treegraph
 
Reported: 2021-02-20 14:15 UTC by damikope
Modified: 2026-02-15 13:34 UTC (History)
26 users (show)

See Also:
Crash report or crash signature:


Attachments
Fresh after opening maximized and going to Layot tabs, only 5 icons shown (18.79 KB, image/png)
2021-02-20 14:18 UTC, damikope
Details
After opening and closing >> menu icons are shown correctly until next restart. (25.92 KB, image/png)
2021-02-20 14:19 UTC, damikope
Details
tabbed UI, Windows 10 with 1100px-wide display: 7.4.5 vs 7.4.6 (165.98 KB, image/png)
2023-03-20 16:58 UTC, stragu
Details
NB is not correctly using its Frame size to calculate which tools should be shown (872.89 KB, image/gif)
2023-03-31 15:12 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description damikope 2021-02-20 14:15:59 UTC
Description:
When using Tabbed UI with LibreOffice 7.1 software is not using the whole width of the window to show icons - instead they are hidden under >> hamburger menu.



Steps to Reproduce:
1. Open LibreOffice Calc in full screen.
2. Go to Layout (or Tools, same problem) tab.


Actual Results:
Not all icons that would fit are shown, only a few; the rest is hidden in >> menu until you click on the >> icon and then close it.

Expected Results:
Icons should take all the possible space without opening >> icon first.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.1.0.3 / LibreOffice Community
Build ID: 10(Build:3)
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: kf5
Locale: hu-HU (hu_HU.UTF-8); UI: hu-HU
Calc: threaded

After opening and closing >> menu icons are shown correctly until next restart of program.
Comment 1 damikope 2021-02-20 14:18:20 UTC
Created attachment 169919 [details]
Fresh after opening maximized and going to Layot tabs, only 5 icons shown
Comment 2 damikope 2021-02-20 14:19:29 UTC
Created attachment 169920 [details]
After opening and closing >> menu icons are shown correctly until next restart.
Comment 3 V Stuart Foote 2021-02-20 16:20:02 UTC
Can not confirm on Windows builds
Version: 7.1.1.1 (x64) / LibreOffice Community
Build ID: 575c5867c4cc13d7ae78f9ce39a54a52ed38c769
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: default; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 4 Rizal Muttaqin 2021-02-22 15:07:58 UTC
Yes this bug always appears in my GNU/Linux machine since the first time NB Tabbed UI was out of experimental.

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 3a1e3bd2bb71d084233dfb791c1d0c3dd81b43e5
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: id-ID (id_ID.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-02-19_03:26:19
Calc: threaded
Comment 5 andreas_k 2021-02-26 22:41:20 UTC
I think it's an update issue and yes it's annoying.
Comment 6 Rizal Muttaqin 2021-02-27 03:17:48 UTC
also reproducible with:

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 385808a2dff7300ec0120fdd5e8acfad8f86e50d
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: id-ID (id_ID.UTF-8); UI: id-ID
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-02-21_21:04:33
Calc: threaded
Comment 7 V Stuart Foote 2021-10-16 12:29:09 UTC
*** Bug 145164 has been marked as a duplicate of this bug. ***
Comment 8 V Stuart Foote 2021-10-16 12:32:03 UTC
*** Bug 141465 has been marked as a duplicate of this bug. ***
Comment 9 V Stuart Foote 2021-10-16 12:34:55 UTC
attachment 175773 [details] of issue from dupe bug 145164 on

Operating System: Manjaro Linux
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Kernel Version: 5.4.150-1-MANJARO (64-bit)
Graphics Platform: X11
Comment 10 Mike Kaganski 2022-01-11 06:18:49 UTC
*** Bug 142480 has been marked as a duplicate of this bug. ***
Comment 11 Mike Kaganski 2022-01-11 06:27:46 UTC
It is reproducible on Windows as well - despite claimed otherwise, it's confirmed there in bug 141465 comment 3, and also independently at https://forumooo.ru/index.php/topic,8982 (Rus).

To reproduce reliably, make the LO Start Center window between 1090 and 1200 pixel wide, and then load/create a Calc document. (To control window width, you may e.g. make screenshots, then paste them to an image editor and check the width there, or use a screen ruler.)
Comment 12 Mike Kaganski 2022-01-11 06:48:12 UTC Comment hidden (obsolete)
Comment 13 Mike Kaganski 2022-01-11 07:18:05 UTC
Reverting https://git.libreoffice.org/core/+/53d73d532281b6734a7d4614bb74fc6cc15510f0, the problem disappears.

> author	Szymon Kłos <eszkadev@gmail.com>	Wed Jun 03 15:26:50 2020 +0200
> notebookbar: simplify custom widgets

Szymon: I see you are already in CC :-)
Comment 14 Mike Kaganski 2022-05-06 07:55:07 UTC
*** Bug 148960 has been marked as a duplicate of this bug. ***
Comment 15 V Stuart Foote 2022-08-27 19:41:10 UTC
*** Bug 150634 has been marked as a duplicate of this bug. ***
Comment 16 V Stuart Foote 2022-11-27 15:39:48 UTC
*** Bug 152230 has been marked as a duplicate of this bug. ***
Comment 17 V Stuart Foote 2023-02-11 15:11:52 UTC
With STR comment 11 it remains an issue with 20230211 build of master

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9788a565b3241d1bd62394b9e29c322361d05f80
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 18 stragu 2023-02-23 14:51:15 UTC
*** Bug 153494 has been marked as a duplicate of this bug. ***
Comment 19 stragu 2023-02-23 14:54:21 UTC
GIFs of the issue in duplicate bug 153494's attachment 185257 [details] and attachment 185258 [details].
Comment 20 V Stuart Foote 2023-02-23 16:57:37 UTC
@Mike, stragu -- Interesting looking at see also bug 153788 with Mike's STR  (Start Center width 1090 >< 1200) from comment 11. 

Scaling the os/DE text size impacts how many of the NB button widgets on Tabs are hidden in the chevron.

In Windows 10, adjusting the 'Make text bigger' control for the os/DE UI applies to LibreOffice's UI text fields but also affects the count of widget buttons that show.

At 125% scale more widget buttons are hidden than at 100%.

And of course they fill in when the "exposure" chevrons are clicked.
Comment 21 V Stuart Foote 2023-03-13 16:06:37 UTC
*** Bug 153788 has been marked as a duplicate of this bug. ***
Comment 22 ady 2023-03-14 11:19:55 UTC
(In reply to damikope from comment #2)
> After opening and closing >> menu icons are shown correctly until next
> restart.

It happens for every file or window of Calc (no restart needed), also for same file opened twice. Full toolbar width is never saved.

It happens with OS's text scaling too (bug 153788).

Both Tabbed and Tabbed Compact are affected.

LO 7.1 added the UI selection dialog and the "new widget with styles preview" for the Notebookbar
https://wiki.documentfoundation.org/ReleaseNotes/7.1#GUI

Reported 20 days after LO 7.1; two years and 9 months ago. More annoying by the minute.

Szymon Kłos ?
Comment 23 V Stuart Foote 2023-03-14 16:18:19 UTC
Adjusting priority/severity as this really is adversely affecting MUFFIN NB UX and dupes are over the threshold now.
Comment 24 stragu 2023-03-20 16:58:51 UTC
Created attachment 186096 [details]
tabbed UI, Windows 10 with 1100px-wide display: 7.4.5 vs 7.4.6

Testing on Windows 10 with a display width of 1100, situation got significantly worse between 7.4.5.1 and 7.4.6.1, see attached comparison.
Could have been because of an unrelated minor change, but shows how bad it can look depending on displays.
I think that's what OP noticed in bug 154283.
Comment 25 stragu 2023-03-20 17:10:03 UTC
*** Bug 154283 has been marked as a duplicate of this bug. ***
Comment 26 ady 2023-03-20 19:06:30 UTC Comment hidden (off-topic)
Comment 27 V Stuart Foote 2023-03-20 21:00:19 UTC Comment hidden (off-topic)
Comment 28 V Stuart Foote 2023-03-31 15:12:19 UTC
Created attachment 186372 [details]
NB is not correctly using its Frame size to calculate which tools should be shown

Capture of calc from LO master in NB Tabbed UI in a 1023px wide window frame. This is on a 1920px display, so the lb holding the hidden controls extends out of frame.

But, every Tab of the NB is not initializing correctly, too many of its tools are being added to the hidden lb accessed via exposure chevrons. Some of the tabs are completely blank!

This has been an issue with NB framework since implementation, e.g. see bug 105564 there is something wrong initializing sizes of the NB tabs.


Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b463f697405e64a03378fb38a32172c4d3c25e6
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 29 stragu 2023-04-05 17:08:03 UTC
*** Bug 154626 has been marked as a duplicate of this bug. ***
Comment 30 ady 2023-04-14 10:50:08 UTC
*** Bug 154807 has been marked as a duplicate of this bug. ***
Comment 31 stragu 2023-04-19 08:00:43 UTC
*** Bug 154895 has been marked as a duplicate of this bug. ***
Comment 32 medmedin2014 2023-04-19 10:02:26 UTC
This bug was not severe on old versions, but with v7.5.1 it makes the whole LO not usable at all on Windows, the effects are so bad that each tab upon return keeps hiding its elements even if you already clicked on the expanding arrow.
Comment 33 ady 2023-04-19 19:55:09 UTC
Attachment 185559 [details] is for UI in English for me, half of the Tabbed Home toolbar empty. 

With the same exact context, changing LO's UI to Dutch (Netherlands) shows the _entire_ toolbar empty.

So, this annoying behavior depends/varies (among others) on:

* Window size;
* OS's text scaling;
* LO's UI language.

The reports started around 26 months ago ATM, 20 days after the release of 7.1. We can only hope LO 7.6 gets a fix for this.
Comment 34 Justin L 2023-05-22 18:02:24 UTC
I saw the fix for bug 147740 in Feb for 7.6. Unfortunately, that doesn't seem to fix this bug.

How I tested:
-just opened up a new Calc sheet with maximized window on 1600x900 screen. The "Home" tab had space for a few hidden items, which were added after seeing they were available with the >> more indicator.

Confirmed bibisect to 7.1 as reported in comment 13.

Proposed fix at https://gerrit.libreoffice.org/c/core/+/152125
Comment 35 Commit Notification 2023-05-23 15:46:18 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dce8d2dbc48eb1c7597afec236dc51b4b8aede9c

tdf#140557 notebookbar: be smarter about hidden window size

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 36 Justin L 2023-05-23 15:51:30 UTC
no backporting please - unless you are of the UI caliber of Szymon and are certain there won't be unintended bad side effects. This seems like a regression-prone area to work in.
Comment 37 V Stuart Foote 2023-05-23 16:47:18 UTC
(In reply to Justin L from comment #36)
> no backporting please - unless you are of the UI caliber of Szymon and are
> certain there won't be unintended bad side effects. This seems like a
> regression-prone area to work in.

I don't know, seems like plenty of head room yet with 7.5.5, 7.5.6 even a 7.5.7 to finalize yet to go should a regression rear its head.

We've backported and/or reverted for less ;-)
Comment 38 stragu 2023-06-07 15:58:50 UTC
*** Bug 155658 has been marked as a duplicate of this bug. ***
Comment 39 stragu 2023-06-07 16:12:41 UTC
Thanks for the fix, Justin.

@all: If you are subscribed to this bug because you were affected, it would be much appreciated if you could test the fix with a recent master build: https://dev-builds.libreoffice.org/daily/master/current.html
Please report if there are further / new issues, or if it now works as expected.
Positive feedback would increase our confidence in backporting the fix to 7.5.
(Noting that Szymon gave the patch a +2, I would encourage a backport if there is enough user testing. Otherwise I'm sure we'll see many more duplicates over the next few months.)
Comment 40 Rafael Lima 2023-06-07 17:02:11 UTC
(In reply to Stéphane Guillou (stragu) from comment #39)
> @all: If you are subscribed to this bug because you were affected, it would
> be much appreciated if you could test the fix with a recent master build:
> https://dev-builds.libreoffice.org/daily/master/current.html

I tested it today and the Tabbed UI worked as expected. Now, even when the window starts in an non-maximized state, the controls appear and use all the available space.

I could not find any regressions or crashes. I would support backporting it.

Tested with

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 862b7607b650518bb7b4644d080d953e8df90675
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 41 ady 2023-06-07 20:12:43 UTC
Tested OK in Calc:

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 389a8d52d9961f89c0b2847b30ee1ca59a8fdc80
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: en-US (es_AR); UI: en-US
Calc: CL threaded

I have only tested the minimal behavior, but not some other factors (e.g. other modules besides Calc, comment 22, comment 33, dups...).

(In reply to Stéphane Guillou (stragu) from comment #39)
> Please report if there are further / new issues, or if it now works as
> expected.

I would take "works as expected" as strictly related to this report bug 140557 and its dups; the Tabbed UI still has many unresolved issues (some of them already reported but no work on them).

> 7.5.
> (Noting that Szymon gave the patch a +2

FWIW, IDK how that would give more confidence about the backport, considering comment 36. I guess that either someone attempts it, or not, and users might report (or quit using the Tabbed UI).
Comment 42 Martin Sourada 2023-06-08 05:14:10 UTC
For me it works as expected (with regards to this bug), tested with latest master on Linux (GTK), Writer and Calc modules.
Comment 43 Maverick 2023-06-12 11:44:58 UTC
I have tested it in Windows10-64bit and i can say it also worked well here.
It's great to see this finally fixed.

(by the way, an AppImage of this for linux would make it A LOT more easy to test)
Comment 44 Justin L 2023-07-18 10:53:26 UTC
*** Bug 156346 has been marked as a duplicate of this bug. ***
Comment 45 stragu 2023-09-29 23:38:52 UTC
*** Bug 156976 has been marked as a duplicate of this bug. ***
Comment 46 stragu 2024-05-30 14:59:14 UTC Comment hidden (obsolete)
Comment 47 stragu 2024-07-11 13:04:14 UTC Comment hidden (obsolete)
Comment 48 Mike Kaganski 2025-01-11 16:44:41 UTC
*** Bug 164670 has been marked as a duplicate of this bug. ***